--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,28 @@ project(FunctionParser)
 set(JSON_BuildTests OFF CACHE INTERNAL "")
 add_subdirectory(third_party/json)
 
-set(CMAKE_FIND_LIBRARY_SUFFIXES .a)
+
+IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -frtti -fexceptions")
+    # 参数解析
+    # -frtti 启动 RTTI
+    # -fexceptions 启动 exception
+
+    set(CMAKE_EXE_LINKER_FLAGS "-static")
+    set(CMAKE_FIND_LIBRARY_SUFFIXES .a)
+ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /GR /EHsc /bigobj")
+    # 参数解析
+    # /GR 启动 RTTI
+    # /EHsc 启动 exception
+    # /bigobj 大对象
+
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
+ELSE ()
+    MESSAGE(STATUS "other platform: ${CMAKE_SYSTEM_NAME}")
+ENDIF ()
+
 
 # 寻找 LLVM 和 Clang
 find_package(LLVM REQUIRED CONFIG)
@@ -13,21 +34,6 @@ find_package(Clang REQUIRED CONFIG)
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 
-IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -frtti -fexceptions")
-    # 参数解析
-    # -frtti 启动 RTTI
-    # -fexceptions 启动 exception
-ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /GR /EHsc /bigobj")
-    # 参数解析
-    # /GR 启动 RTTI
-    # /EHsc 启动 exception
-    # /bigobj 大对象
-ELSE ()
-    MESSAGE(STATUS "other platform: ${CMAKE_SYSTEM_NAME}")
-ENDIF ()
-
 include_directories(
         ${LLVM_INCLUDE_DIRS}
         ${CMAKE_CURRENT_LIST_DIR}/include
@@ -35,10 +41,16 @@ include_directories(
 link_directories(${LLVM_LIBRARY_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
 
-set(CMAKE_EXE_LINKER_FLAGS "-static")
-
 aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/src SRC)
-add_executable(FunctionParser main.cpp ${SRC})
+add_executable(${PROJECT_NAME} main.cpp ${SRC})
+
+
+IF (CMAKE_SYSTEM_NAME MATCHES "Windows")
+    set_target_properties(${PROJECT_NAME} PROPERTIES
+            MSVC_RUNTIME_LIBRARY MultiThreaded
+    )
+ENDIF ()
+
 # 链接 Clang 和 LLVM 库
 target_link_libraries(FunctionParser
         clangTooling
